--- a/src/users/components/UserItem.css
+++ b/src/users/components/UserItem.css
@@ -1,34 +1,56 @@
 .user-item {
-  margin: 1rem 0;
+  margin: 1rem;
+  width: calc(50% - 2rem);
+  min-width: 17.5rem;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 1rem;
+
+}
+
+/*.user-item a {*/
+/*  display: flex;*/
+/*  align-items: center;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  text-decoration: none;*/
+/*  padding: 1rem;*/
+/*  color: white;*/
+/*  background: #292929;*/
+/*}*/
+
+.user-item a:hover,
+.user-item a:active {
+  background: #ffd900;
 }
 
 .user-item__content {
   padding: 0;
 }
 
-.user-item__info {
-  padding: 1rem;
-  text-align: center;
-}
-
 .user-item__image {
-margin: 0 auto;
-  width: 50%;
-  height: 12.5rem;
-
+  width: 4rem;
+  height: 4rem;
+  margin-right: 1rem;
 }
 
-.user-item__image img {
-
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.user-item__info h2,
-.user-item__info h3,
-.user-item__info p {
+.user-item__info h2 {
+  font-size: 1.5rem;
   margin: 0 0 0.5rem 0;
+  font-weight: normal;
+  color: #ffd900;
+}
+
+.user-item:hover h2,
+.user-item:active h2,
+.user-item:hover h3,
+.user-item:active h3 {
+  color: #292929;
+}
+
+.user-item__info h3 {
+  margin: 0;
 }
 
 .user-item__actions {
@@ -48,12 +70,4 @@ margin: 0 auto;
 .user-item__actions button,
 .user-item__actions a {
   margin: 0.5rem;
-}
-
-
-
-@media (min-width: 768px) {
-  .user-item__image {
-    height: 20rem;
-  }
 }
