--- a/src/shared/components/FormElements/Input.css
+++ b/src/shared/components/FormElements/Input.css
@@ -1,20 +1,20 @@
-.form-control {
+.form-controls {
     margin: 1rem 0;
 }
 
-.form-control label,
-.form-control input,
-.form-control textarea {
+.form-controls label,
+.form-controls input,
+.form-controls textarea {
     display: block;
 }
 
-.form-control label {
+.form-controls label {
     font-weight: bold;
     margin-bottom: 0.5rem;
 }
 
-.form-control input,
-.form-control textarea {
+.form-controls input,
+.form-controls textarea {
     width: 100%;
     font: inherit;
     border: 1px solid #ccc;
@@ -22,8 +22,8 @@
     padding: 0.15rem 0.25rem;
 }
 
-.form-control input:focus,
-.form-control textarea:focus {
+.form-controls input:focus,
+.form-controls textarea:focus {
     outline: none;
     background: #ebebeb;
     border-color: #510077;
