--- a/src/users/components/UserItem.css
+++ b/src/users/components/UserItem.css
@@ -1,12 +1,12 @@
 .user-item {
-  margin: 1rem;
-  width: calc(50% - 2rem);
-  min-width: 17.5rem;
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  padding: 1rem;
-
+    /*margin: 1rem;*/
+    /*width: calc(50% - 2rem);*/
+    /*min-width: 17.5rem;*/
+    /*display: flex;*/
+    align-items: center;
+    text-decoration: none;
+    padding: 0.5rem;
+    width: 100%;
 }
 
 /*.user-item a {*/
@@ -22,52 +22,52 @@
 
 .user-item a:hover,
 .user-item a:active {
-  background: #ffd900;
+    background: #ffd900;
 }
 
 .user-item__content {
-  padding: 0;
+    padding: 5px;
 }
 
 .user-item__image {
-  width: 4rem;
-  height: 4rem;
-  margin-right: 1rem;
+    width: 4rem;
+    height: 4rem;
+    margin-right: 1rem;
 }
 
 .user-item__info h2 {
-  font-size: 1.5rem;
-  margin: 0 0 0.5rem 0;
-  font-weight: normal;
-  color: #ffd900;
+    font-size: 1.5rem;
+    margin: 0 0 0.5rem 0;
+    font-weight: normal;
+    color: #ffd900;
 }
 
 .user-item:hover h2,
 .user-item:active h2,
 .user-item:hover h3,
 .user-item:active h3 {
-  color: #292929;
+    color: #292929;
 }
 
 .user-item__info h3 {
-  margin: 0;
+    margin: 0;
 }
 
 .user-item__actions {
-  padding: 1rem;
-  text-align: center;
-  border-top: 1px solid #ccc;
+    padding: 1rem;
+    text-align: center;
+    border-top: 1px solid #ccc;
 }
 
 .user-item__modal-content {
-  padding: 0;
+    padding: 0;
 }
 
 .user-item__modal-actions {
-  text-align: right;
+    text-align: right;
 }
 
 .user-item__actions button,
 .user-item__actions a {
-  margin: 0.5rem;
+    margin: 0.5rem;
 }
