--- a/src/shared/components/Navigation/MainHeader.css
+++ b/src/shared/components/Navigation/MainHeader.css
@@ -6,14 +6,14 @@
   position: fixed;
   top: 0;
   left: 0;
-  background: #54e346;
+  background: #388e3c;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26);
   padding: 0 1rem;
   z-index: 5;
 }
 
 main {
-  margin-top: 5rem;
+  margin-top: 4.5rem;
 }
 
 @media (min-width: 1390px) {
