--- a/src/users/pages/UserForm.css
+++ b/src/users/pages/UserForm.css
@@ -1,6 +1,6 @@
 .user-form {
     list-style: none;
-    margin: 0 auto;
+    margin: 10em auto;
     padding: 1rem;
     width: 90%;
     max-width: 40rem;
