--- a/src/auth/Auth.css
+++ b/src/auth/Auth.css
@@ -1,15 +1,31 @@
-.authentication__header {
+/* .authentication__header {
     color: white;
     text-align: center;
+    background: rgb(0, 0, 0, 0.3);
 }
+
+.header{
+    color: white;
+} */
 
 .authentication {
     width: 90%;
     max-width: 25rem;
     margin: 15rem auto;
     text-align: center;
+    background: rgb(0, 0, 0, 0.3);
 }
 
 .authentication form {
     margin-bottom: 1rem;
+    background: rgb(0, 0, 0, 0.3);
 }
+/* list-style: none;
+    margin-top: 5%;
+    margin-left: 30%;
+    padding: 2rem;
+    width: 100%;
+    max-width: 40rem;
+    box-shadow: 0 2px 8px rgba(0, 0, 0);
+    border-radius: 6px;
+    background: rgb(0, 0, 0, 0.3); */
