--- a/src/machines/pages/MachineForm.css
+++ b/src/machines/pages/MachineForm.css
@@ -1,10 +1,12 @@
 .machine-form {
     list-style: none;
-    margin: 0 auto;
-    padding: 1rem;
-    width: 90%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-left: 30%;
+    padding: 2rem;
+    width: 100%;
     max-width: 40rem;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    box-shadow: 0 2px 8px rgba(0, 0, 0);
     border-radius: 6px;
-    background: white;
+    background: rgb(0, 0, 0, 0.3);
 }
