--- a/src/shared/components/FormElements/Input.css
+++ b/src/shared/components/FormElements/Input.css
@@ -1,41 +1,74 @@
 .form-controls {
-    margin: 1rem 0;
+    margin: 2rem 0;
 }
 
 .form-controls label,
 .form-controls input,
 .form-controls textarea {
     display: block;
-}
-
-.form-controls label {
+    color: white;
     font-weight: bold;
     margin-bottom: 0.5rem;
+    font-size: large;
 }
+
+.form-controls select{
+    background-color: transparent;
+    color: white;
+    border-bottom: 2px solid white;
+    border-top: transparent;
+    border-left: transparent;
+    border-right: transparent;
+    font-size: medium;
+    margin-top: 0.5rem;
+    padding-bottom: 0.25rem;
+}
+
+.form-controls option{
+    background-color: #004704;
+    color: white;
+}
+
+/* .form-controls label {
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    font-size: medium;
+} */
 
 .form-controls input,
 .form-controls textarea {
     width: 100%;
     font: inherit;
-    border: 1px solid #ccc;
-    background: #f8f8f8;
+    /* border: 1px solid #ccc; */
+    border-bottom: 2px solid white;
+    border-top: transparent;
+    border-left: transparent;
+    border-right: transparent;
+    background: transparent;
     padding: 0.15rem 0.25rem;
 }
 
 .form-controls input:focus,
 .form-controls textarea:focus {
     outline: none;
-    background: #ebebeb;
-    border-color: #510077;
+    background: transparent;
+    border-color: turquoise;
 }
 
-.form-control--invalid label,
+.form-control--invalid label{
+    color: #af0000;
+    font-weight: bolder;
+}
 .form-control--invalid p {
-    color: red;
+    color: #af0000;
 }
 
 .form-control--invalid input,
 .form-control--invalid textarea {
     border-color: red;
-    background: #ffd1d1;
+    background: transparent;
+    /* border-bottom: 2px solid white; */
+    border-top: transparent;
+    border-left: transparent;
+    border-right: transparent;
 }
