--- a/src/reports/pages/SupplierSelection.css
+++ b/src/reports/pages/SupplierSelection.css
@@ -3,10 +3,21 @@
 /*}*/
 
 .supplier-profile-item__content {
-    /*margin: 10em auto;*/
-    width: 25em;
-    height: 35em;
-    padding: 0;
+
+
+    margin-top: 5%;
+    /*margin-bottom: 5%;*/
+    /*margin-left: 20%;*/
+    /*margin-right: 20%;*/
+    padding: 1rem;
+    width: 100%;
+    max-width: 10rem;
+    max-height: 40rem;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0 2px 8px rgba(0, 0, 0);
+    border-radius: 6px;
+
 }
 
 .supplier-profile-item__info {
@@ -59,7 +70,7 @@
 
     .supplier-profile-item__content {
         display: flex;
-
+        color: black;
         margin-top: 5%;
         /*margin-bottom: 5%;*/
         /*margin-left: 20%;*/
@@ -73,5 +84,12 @@
         box-shadow: 0 2px 8px rgba(0, 0, 0);
         border-radius: 6px;
 
+    }
+    .supplier-profile-item__content label{
+        color: black;
+    }
+    .supplier-profile-item__content button {
+        margin-left: 0.2rem;
+        margin-right: 0;
     }
 }
